--- a/crates/world/flashblocks/Cargo.toml
+++ b/crates/world/flashblocks/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "flashblocks-payload"
+name = "flashblocks"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
