--- a/crates/world/flashblocks/Cargo.toml
+++ b/crates/world/flashblocks/Cargo.toml
@@ -36,8 +36,8 @@ alloy-consensus.workspace = true
 alloy-primitives.workspace = true
 alloy-rpc-types-eth.workspace = true
 alloy-eips.workspace = true
+alloy-evm.workspace = true
 alloy-serde.workspace = true
-
 
 # tokio
 tokio.workspace = true
