--- a/Cargo.toml
+++ b/Cargo.toml
@@ -129,9 +129,9 @@ chrono = "0.4"
 thiserror = "1"
 strum = { version = "0.26", features = ["derive"] }
 bytemuck = "1"
-semaphore-rs = { git = "https://github.com/worldcoin/semaphore-rs.git", rev = "aa8e76d" }
-semaphore-rs-tree = { git = "https://github.com/worldcoin/semaphore-rs.git", rev = "aa8e76d" }
-semaphore-rs-proof = { git = "https://github.com/worldcoin/semaphore-rs.git", rev = "aa8e76d" }
+semaphore-rs = "0.3.1"
+semaphore-rs-tree = "0.3.1"
+semaphore-rs-proof = "0.3.1"
 clap = { version = "4", features = ["derive", "env"] }
 eyre = { version = "0.6", package = "color-eyre" }
 serde = { version = "1", features = ["derive"] }
