--- a/crates/tests/sepolia/Cargo.toml
+++ b/crates/tests/sepolia/Cargo.toml
@@ -16,6 +16,7 @@ world-chain-builder-pbh.workspace = true
 
 alloy-primitives.workspace = true
 alloy-provider.workspace = true
+alloy-signer.workspace = true
 alloy-signer-local.workspace = true
 alloy-rpc-types-eth.workspace = true
 alloy-sol-types.workspace = true
