--- a/crates/tests/sepolia/Cargo.toml
+++ b/crates/tests/sepolia/Cargo.toml
@@ -30,7 +30,7 @@ reqwest.workspace = true
 semaphore-rs = { workspace = true, features = ["depth_30"]}
 serde_json.workspace = true
 serde = { workspace = true, features = ["derive"]}
-rand = "0.8.5"
+rand.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
