--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -20,6 +20,7 @@ reth.workspace = true
 reth-evm.workspace = true
 reth-chain-state = { workspace = true, optional = true }
 reth-db = { workspace = true, optional = true }
+reth-node-builder.workspace = true
 reth-optimism-chainspec.workspace = true
 reth-optimism-node.workspace = true
 reth-optimism-primitives.workspace = true
@@ -34,11 +35,14 @@ reth-trie = { workspace = true, optional = true }
 reth-trie-db.workspace = true
 reth-transaction-pool.workspace = true
 reth-e2e-test-utils = { workspace = true, optional = true }
+reth-node-api.workspace = true
 alloy-eips = { workspace = true, optional = true }
 alloy-primitives.workspace = true
 alloy-rpc-types = { workspace = true, optional = true }
 alloy-sol-types = { workspace = true, optional = true }
 revm-primitives = { workspace = true, optional = true }
+op-alloy-consensus.workspace = true
+alloy-rpc-types-eth.workspace = true
 
 tokio = { workspace = true, optional = true }
 eyre.workspace = true
