chore: update ci

--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -58,7 +58,7 @@ jobs:
   cargo-clippy:
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    name: lint
+    name: clippy
     steps:
         - uses: actions/checkout@v4
         - uses: taiki-e/install-action@just
