--- a/devnet/network_params.yaml
+++ b/devnet/network_params.yaml
@@ -19,7 +19,7 @@ optimism_package:
         holocene_time_offset: 0
         isthmus_time_offset: 20
       mev_params:
-        rollup_boost_image: "flashbots/rollup-boost:sha-5286e01"
+        image: "flashbots/rollup-boost:sha-5286e01"
       additional_services:
         - rollup-boost
         - blockscout
