--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ resolver = "2"
 members = [
     "crates/toolkit",
     "crates/world/bin",
+    "crates/world/flashblocks",
     "crates/world/node",
     "crates/world/payload",
     "crates/world/rpc",
@@ -18,7 +19,6 @@ members = [
     "crates/world/pool",
     "crates/world/test-utils",
     "crates/world/chainspec", 
-    "crates/world/flashblocks",
     "crates/tests/sepolia",
     "crates/tests/devnet",
 ]
@@ -44,92 +44,90 @@ world-chain-builder-test-utils = { path = "crates/world/test-utils" }
 flashblocks = { path = "crates/world/flashblocks" }
 
 # reth
-reth = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8", features = [
+reth = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0", features = [
   "test-utils",
 ] }
-reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-prune-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-chain-state = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-stages-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-payload-util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8", default-features = false }
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-execution-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-payload-builder-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
+reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-prune-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-chain-state = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-stages-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-payload-util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0", default-features = false }
+reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
 
 # reth-optimism
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth_payload_util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
-reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "v1.4.8" }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth_payload_util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-optimism-storage = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
 
 # alloy op
-op-alloy-consensus = "0.17.2"
-op-alloy-rpc-types = "0.17.2"
-op-alloy-rpc-types-engine = "0.17.2"
-op-alloy-network = "0.17.2"
+op-alloy-consensus = "0.18.9"
+op-alloy-rpc-types = "0.18.9"
+op-alloy-rpc-types-engine = "0.18.9"
+op-alloy-network = "0.18.9"
 alloy-op-hardforks = "0.2.2"
 
 # alloy
-alloy = { version = "1.0.9" }
+alloy = { version = "1.0.16" }
 alloy-chains = { version = "0.2.0", default-features = false }
-alloy-provider = { version = "1.0.9", default-features = false }
-alloy-rpc-client = { version = "1.0.9", default-features = false }
-alloy-transport-http = { version = "1.0.9", default-features = false }
-alloy-transport = { version = "1.0.9", default-features = false }
-alloy-consensus = { version = "1.0.9", default-features = false }
-alloy-network = { version = "1.0.9", default-features = false }
-alloy-primitives = { version = "1.1.0", default-features = false }
-alloy-rpc-types-eth = { version = "1.0.9", default-features = false }
-alloy-rpc-types = { version = "1.0.9", features = [
+alloy-provider = { version = "1.0.16", default-features = false }
+alloy-rpc-client = { version = "1.0.16", default-features = false }
+alloy-transport-http = { version = "1.0.16", default-features = false }
+alloy-transport = { version = "1.0.16", default-features = false }
+alloy-consensus = { version = "1.0.16", default-features = false }
+alloy-network = { version = "1.0.16", default-features = false }
+alloy-primitives = { version = "1.2.0", default-features = false }
+alloy-rpc-types-eth = { version = "1.0.16", default-features = false }
+alloy-rpc-types = { version = "1.0.16", features = [
   "eth",
 ], default-features = false }
-alloy-evm = { version = "0.11.0", default-features = false }
-alloy-serde = { version = "1.0.11", default-features = false}
 alloy-rpc-types-engine = { version = "1.0.9" }
 alloy-rlp = { version = "0.3.10", default-features = false }
-alloy-eips = { version = "1.0.9", default-features = false }
-alloy-genesis = { version = "1.0.9", default-features = false }
-alloy-rpc-types-debug = "1.0.9"
-alloy-signer = { version = "1.0.9", default-features = false }
-alloy-signer-local = { version = "1.0.9", default-features = false }
+alloy-eips = { version = "1.0.16", default-features = false }
+alloy-genesis = { version = "1.0.16", default-features = false }
+alloy-rpc-types-debug = "1.0.16"
+alloy-signer = { version = "1.0.16", default-features = false }
+alloy-signer-local = { version = "1.0.16", default-features = false }
 alloy-sol-types = "1.1.0"
+alloy-serde = { version = "1.0.11", default-features = false}
+
 
 # revm
-revm = { version = "24.0.1", default-features = false }
-revm-primitives = { version = "19.0.0", default-features = false }
-op-revm = { version = "5.0.0", default-features = false }
+revm = { version = "26.0.1", default-features = false }
+revm-primitives = { version = "20.0.0", default-features = false }
+op-revm = { version = "7.0.1", default-features = false }
 
 # rpc
 jsonrpsee = { version = "0.25.1", features = ["server", "client", "macros"] }
