--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -25,6 +25,7 @@ reth-node-builder.workspace = true
 reth-optimism-chainspec.workspace = true
 reth-optimism-node.workspace = true
 reth-optimism-primitives.workspace = true
+reth-optimism-storage.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-optimism-rpc.workspace = true
 reth-primitives = { workspace = true, optional = true }
