--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ members = [
     "crates/world/pbh",
     "crates/world/pool",
     "crates/world/test-utils",
-    "crates/world/chainspec", 
+    "crates/world/chainspec",
     "crates/tests/sepolia",
     "crates/tests/devnet",
 ]
@@ -51,7 +51,7 @@ reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
 reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
 reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
 reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0", features = [
-  "test-utils",
+    "test-utils",
 ] }
 reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
 reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
@@ -64,6 +64,9 @@ reth-stages-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0
 reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
 reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
 reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
+reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0", features = [
+    "op",
+] }
 reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
 reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
 reth-payload-util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.5.0" }
@@ -111,7 +114,7 @@ alloy-network = { version = "1.0.16", default-features = false }
 alloy-primitives = { version = "1.2.0", default-features = false }
 alloy-rpc-types-eth = { version = "1.0.16", default-features = false }
 alloy-rpc-types = { version = "1.0.16", features = [
-  "eth",
+    "eth",
 ], default-features = false }
 alloy-rpc-types-engine = { version = "1.0.16" }
 alloy-rlp = { version = "0.3.10", default-features = false }
@@ -121,7 +124,7 @@ alloy-rpc-types-debug = "1.0.16"
 alloy-signer = { version = "1.0.16", default-features = false }
 alloy-signer-local = { version = "1.0.16", default-features = false }
 alloy-sol-types = "1.1.0"
-alloy-serde = { version = "1.0.11", default-features = false}
+alloy-serde = { version = "1.0.11", default-features = false }
 
 
 # revm
@@ -135,6 +138,7 @@ jsonrpsee-types = "0.25.1"
 
 # 3rd party
 tokio = { version = "1.44.2", features = ["full"] }
+tokio-util = "0.7.15"
 futures = "0.3"
 chrono = "0.4"
 thiserror = "1"
