--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -22,6 +22,7 @@ reth.workspace = true
 reth-chain-state = { workspace = true, optional = true }
 reth-db = { workspace = true, optional = true }
 reth-node-builder.workspace = true
+reth-engine-local = { workspace = true, optional = true }
 reth-optimism-chainspec.workspace = true
 reth-optimism-node.workspace = true
 reth-optimism-primitives.workspace = true
@@ -30,6 +31,7 @@ reth-optimism-payload-builder.workspace = true
 reth-optimism-rpc.workspace = true
 reth-primitives = { workspace = true, optional = true }
 reth-primitives-traits = { workspace = true, optional = true }
+reth-tracing = { workspace = true, optional = true }
 reth-optimism-forks.workspace = true
 reth-provider.workspace = true
 reth-prune-types = { workspace = true, optional = true }
@@ -83,6 +85,8 @@ test = [
   "world-chain-builder-pbh",
   "dep:reth-e2e-test-utils",
   "dep:reth-chain-state",
+  "dep:reth-tracing",
+  "dep:reth-engine-local",
   "dep:reth-primitives",
   "dep:reth-primitives-traits",
   "dep:reth-prune-types",
