--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -47,6 +47,7 @@ alloy-sol-types = { workspace = true, optional = true }
 revm-primitives = { workspace = true, optional = true }
 op-alloy-consensus.workspace = true
 alloy-rpc-types-eth.workspace = true
+rollup-boost.workspace = true
 
 tokio = { workspace = true }
 eyre.workspace = true
