--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -77,8 +77,8 @@ alloy-genesis.workspace = true
 alloy-network.workspace = true
 alloy-signer-local.workspace = true
 alloy-eips.workspace = true
-
 tokio-tungstenite.workspace = true
+futures-util.workspace = true
 tokio-util.workspace = true
 criterion.workspace = true
 semaphore-rs = { workspace = true, features = ["depth_30"] }
