--- a/Cargo.toml
+++ b/Cargo.toml
@@ -151,6 +151,7 @@ tokio = { version = "1.44.2", features = ["full"] }
 tokio-util = "0.7.15"
 tokio-tungstenite = "0.26.2"
 futures = "0.3"
+futures-util = "*"
 chrono = "0.4"
 thiserror = "1"
 strum = { version = "0.27", features = ["derive"] }
