chore: isolate engine api builder initialization into ComponentsBuilder

--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -55,6 +55,7 @@ alloy-rpc-types-eth.workspace = true
 revm-primitives = { workspace = true, optional = true }
 
 tokio = { workspace = true }
+parking_lot.workspace = true
 eyre.workspace = true
 futures = { workspace = true, optional = true }
 clap.workspace = true
