--- a/crates/world/bin/Cargo.toml
+++ b/crates/world/bin/Cargo.toml
@@ -16,9 +16,11 @@ world-chain-builder-node.workspace = true
 world-chain-builder-rpc.workspace = true
 world-chain-builder-chainspec.workspace = true
 
+# rollup-boost
+flashblocks-p2p.workspace = true
+
 # reth
 reth-db.workspace = true
-
 reth-primitives.workspace = true
 reth-payload-builder.workspace = true
 reth-payload-util.workspace = true
@@ -44,6 +46,7 @@ reth-optimism-payload-builder.workspace = true
 reth-optimism-evm.workspace = true
 reth-optimism-rpc.workspace = true
 reth-optimism-chainspec.workspace = true
+reth-optimism-node.workspace = true
 reth-optimism-consensus.workspace = true
 reth-optimism-forks.workspace = true
 reth-optimism-primitives = { workspace = true, features = ["serde"] }
@@ -71,7 +74,7 @@ serde_json.workspace = true
 # test-utils dependencies
 reth-e2e-test-utils = { workspace = true, optional = true }
 alloy-genesis = { workspace = true, optional = true }
-tokio = { workspace = true, optional = true }
+tokio.workspace = true
 tikv-jemallocator = { workspace = true, optional = true }
 
 [dev-dependencies]
