--- a/crates/world/bin/Cargo.toml
+++ b/crates/world/bin/Cargo.toml
@@ -16,6 +16,9 @@ world-chain-builder-node.workspace = true
 world-chain-builder-rpc.workspace = true
 world-chain-builder-chainspec.workspace = true
 
+rollup-boost.workspace = true
+flashblocks-p2p.workspace = true
+
 # reth
 reth-db.workspace = true
 
@@ -64,6 +67,7 @@ clap.workspace = true
 serde.workspace = true
 eyre.workspace = true
 parking_lot.workspace = true
+tokio.workspace = true
 
 # rpc
 serde_json.workspace = true
@@ -71,7 +75,6 @@ serde_json.workspace = true
 # test-utils dependencies
 reth-e2e-test-utils = { workspace = true, optional = true }
 alloy-genesis = { workspace = true, optional = true }
-tokio = { workspace = true, optional = true }
 tikv-jemallocator = { workspace = true, optional = true }
 
 [dev-dependencies]
