--- a/crates/world/flashblocks/Cargo.toml
+++ b/crates/world/flashblocks/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "flashblocks"
+name = "world-chain-builder-flashblocks"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -47,3 +47,7 @@ tracing.workspace = true
 clap.workspace = true
 jsonrpsee-core.workspace = true
 futures.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+eyre.workspace = true
+dashmap.workspace = true
