--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -15,7 +15,7 @@ world-chain-builder-payload.workspace = true
 world-chain-builder-pool.workspace = true
 world-chain-builder-test-utils = { workspace = true, optional = true }
 world-chain-builder-pbh = { workspace = true, optional = true }
-flashblocks.workspace = true
+world-chain-builder-flashblocks.workspace = true
 
 rollup-boost.workspace = true
 flashblocks-p2p.workspace = true
@@ -31,10 +31,11 @@ reth-optimism-primitives.workspace = true
 reth-optimism-storage.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-optimism-rpc.workspace = true
-reth-primitives = { workspace = true, optional = true }
-reth-primitives-traits = { workspace = true, optional = true }
+reth-primitives.workspace = true
+reth-primitives-traits.workspace = true
 reth-tracing = { workspace = true, optional = true }
 reth-optimism-forks.workspace = true
+reth-rpc-engine-api.workspace = true
 reth-provider.workspace = true
 reth-prune-types = { workspace = true, optional = true }
 reth-trie = { workspace = true, optional = true }
@@ -45,18 +46,22 @@ reth-e2e-test-utils = { workspace = true, optional = true }
 reth-node-api.workspace = true
 alloy-eips = { workspace = true, optional = true }
 alloy-primitives.workspace = true
-alloy-rpc-types = { workspace = true, optional = true }
+alloy-rpc-types.workspace = true
 alloy-sol-types = { workspace = true, optional = true }
 revm-primitives = { workspace = true, optional = true }
 op-alloy-consensus.workspace = true
 alloy-rpc-types-eth.workspace = true
+op-alloy-rpc-types-engine.workspace = true
 tokio = { workspace = true }
 eyre.workspace = true
 futures = { workspace = true, optional = true }
 clap.workspace = true
 chrono = { workspace = true, optional = true }
 tracing.workspace = true
-
+parking_lot.workspace = true
+alloy-consensus.workspace = true
+reth-optimism-consensus.workspace = true
+serde.workspace = true
 
 [dev-dependencies]
 world-chain-builder-pbh.workspace = true
@@ -90,12 +95,9 @@ test = [
     "dep:reth-e2e-test-utils",
     "dep:reth-chain-state",
     "dep:reth-tracing",
-    "dep:reth-primitives",
-    "dep:reth-primitives-traits",
     "dep:reth-prune-types",
     "dep:reth-trie",
     "dep:reth-db",
-    "dep:alloy-rpc-types",
     "dep:alloy-sol-types",
     "dep:alloy-eips",
     "dep:revm-primitives",
