--- a/Cargo.toml
+++ b/Cargo.toml
@@ -181,6 +181,7 @@ rayon = "1.10.0"
 auto_impl = "1"
 async-trait = "0.1.88"
 dashmap = "6.1.0"
+tower = "0.5.0"
 
 # WIP
 # [patch."https://github.com/0xOsiris/reth"]
