--- a/crates/world/flashblocks/Cargo.toml
+++ b/crates/world/flashblocks/Cargo.toml
@@ -46,6 +46,7 @@ tokio.workspace = true
 tracing.workspace = true
 clap.workspace = true
 jsonrpsee-core.workspace = true
+jsonrpsee.workspace = true
 futures.workspace = true
 serde.workspace = true
 serde_json.workspace = true
