--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -43,6 +43,7 @@ reth-trie-db.workspace = true
 reth-transaction-pool.workspace = true
 reth-e2e-test-utils = { workspace = true, optional = true }
 reth-node-api.workspace = true
+reth-network-api.workspace = true
 
 alloy-eips = { workspace = true, optional = true }
 alloy-primitives.workspace = true
